# as-doc-2025

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
source/: conf.py  index.rst
source/_templates/: footer.html
source/docker/: index.rst  vm.md  what_is_docker.md
source/setup/: docker.md  index.rst  online-accounts.md
